feat: 로그인 관련 설정 추가