@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.gdsc'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = "16"
 
 configurations {
     compileOnly {
@@ -22,7 +22,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'com.google.http-client:google-http-client-gson:1.41.0'
+
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
     //스웨거
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
 
@@ -35,6 +39,7 @@ dependencies {
     //oauth2.0
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'com.google.api-client', name: 'google-api-client-jackson2', version: '1.20.0'
 
     //jwt
     compileOnly 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -58,6 +63,17 @@ dependencies {
 
 }
 
+
+/*compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
+compileTestJava {
+    options.compilerArgs += ['--enable-preview']
+}*/
+
 tasks.named('test') {
     useJUnitPlatform()
+    //jvmArgs(['--enable-preview'])
 }
+targetCompatibility = JavaVersion.VERSION_16
